fix: improve OCR/code detection and resolve hydration/CORS updates

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 
 # Backend
 OPENAI_API_KEY=
-BACKEND_CORS_ORIGINS=http://localhost:3000
+BACKEND_CORS_ORIGINS=http://localhost:3000,http://localhost:3001,http://localhost:3002
 EXPORT_DIR=generated
 
 # Frontend
